[package]
name = "sailor"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"
resolver = "2"

description = "A sailing navigation application."
documentation = "https://docs.rs/sailor/"
homepage = "https://github.com/Yatekii/sailor"
repository = "https://github.com/Yatekii/sailor"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "visualization", "science"]
keywords = ["sailing", "osm", "gps", "wgpu", "maps"]
license = "MIT OR Apache-2.0"

autobins = false

[lib]
name = "osm"
path = "src/lib/main.rs"

[[bin]]
name = "sailor"
path = "src/bin/main.rs"

[dependencies]
config = "0.10"
crossbeam-channel = "0.5"
imgui = "0.8.2"
imgui-wgpu = "0.19"
log = { version = "0.4", features = ["serde"] }
lyon = "0.13"
malloc_size_of_derive = "0.1"
nalgebra = "0.23"
nalgebra-glm = "0.9"
ncollide2d = "0.26"
nom = "6.0"
notify = "5.0.0-pre.4"
once_cell = "1.4"
parity-util-mem = "0.7"
pollster = "0.2"
pretty_env_logger = "0.4"
quick-protobuf = "0.8"
serde = "1.0"
serde_derive = "1.0"
shaderc = "0.6"
ureq = "2.4"
varint = "0.9"
wgpu = { version = "0.12", features = ["spirv"] }
wgpu_glyph = "0.16"
winit = "0.26.1"
core-foundation = "=0.9.3"

[dependencies.imgui-winit-support]
version = "0.8.2"
default-features = false
features = ["winit-26"]

[profile.release]
debug = true
