[package]
name = "sailor"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"
resolver = "2"

description = "A sailing navigation application."
documentation = "https://docs.rs/sailor/"
homepage = "https://github.com/Yatekii/sailor"
repository = "https://github.com/Yatekii/sailor"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "visualization", "science"]
keywords = ["sailing", "osm", "gps", "wgpu", "maps"]
license = "MIT OR Apache-2.0"

autobins = false

[lib]
name = "osm"
path = "src/lib/main.rs"

[[bin]]
name = "sailor"
path = "src/bin/main.rs"

[dependencies]
config = "0.10"
crossbeam-channel = "0.5"
log = { version = "0.4", features = ["serde"] }
lyon = { version = "1", path = "../lyon/crates/lyon" }
malloc_size_of_derive = "0.1"
nalgebra = "0.23"
nalgebra-glm = "0.9"
ncollide2d = "0.26"
nom = "6.0"
notify = "5.0.0-pre.4"
once_cell = "1.4"
parity-util-mem = "0.7"
pollster = "0.2"
pretty_env_logger = "0.4"
quick-protobuf = "0.8"
serde = "1.0"
serde_derive = "1.0"
shaderc = "0.6"
ureq = "2.4"
varint = "0.9"
web-sys = "=0.3.60"
wgpu = { version = "0.14", features = ["spirv"] }
wgpu_glyph = { version = "0.17", path = "../wgpu_glyph" }
winit = "0.27"
core-foundation = "=0.9.3"
egui = "0.19.0"
egui_wgpu_backend = "0.20"
egui_winit_platform = "0.16.0"
egui_demo_lib = "0.19.0"

[profile.release]
debug = true
